Add rendertron setup

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VUE_APP_TITLE=MY_APP
 
 # Docker
 PROJECT_BASE_URL=nyx.local
+RENDERTRON_URL=https://render-tron.appspot.com/render
 NODE_TAG=12
 
 # GraphQL
