--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   front:
-    build: wodby/node:$NODE_TAG
+    image: wodby/node:$NODE_TAG
     container_name: front
     working_dir: /home/node/app
     environment:
       NODE_PORT: $NODE_PORT
+      RENDERTRON_URL: $RENDERTRON_URL
     volumes:
       - ./:/home/node/app
     restart: unless-stopped
@@ -15,7 +16,7 @@ services:
       - 'traefik.port=5000'
       - 'traefik.enable=true'
       - 'traefik.backend=node'
-      - 'traefik.frontend.priority = 10'
+      - 'traefik.frontend.priority=10'
       - 'traefik.frontend.rule=Host:${PROJECT_BASE_URL}'
 
   traefik:
@@ -24,6 +25,6 @@ services:
     command: --web --docker --logLevel=INFO
     ports:
       - '80:80'
-      - '5000:5000'
+      - '443:443'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
