--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:unit:watch": "vue-cli-service test:unit -- --watchAll"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "D": "^1.0.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
@@ -24,6 +26,7 @@
     "core-js": "^2.6.5",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "postcss-import": "^12.0.1",
     "register-service-worker": "^1.6.2",
     "rendertron-middleware": "^0.1.5",
     "serve-static": "^1.13.2",
