Add new packaes in eslint

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue-a11y": "0.0.31",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
     "svgo": "^1.1.0",
