Add web font loader

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ NODE_HOST=0.0.0.0
 NODE_PORT=5000
 VUE_APP_TITLE=MY_APP
 
+# Google
+VUE_APP_GOOGLE_FONT=Rubik:400,700&display=swap
+
 # Docker
 PROJECT_BASE_URL=nyx.local
 RENDERTRON_URL=https://render-tron.appspot.com/render
