--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue-i18n": "^8.0.0",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
