--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@vue/composition-api": "^0.3.4",
     "D": "^1.0.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
