--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 NODE_HOST=0.0.0.0
 NODE_PORT=5000
 VUE_APP_TITLE=MY_APP
+VUE_APP_ACTION_FORM=https://smartforms.dev/submit/5dc8ba32ed25000605199af8
 
 # Google
 VUE_APP_GOOGLE_FONT=Rubik:400,700&display=swap
@@ -16,5 +17,5 @@ VUE_APP_GRAPHQL_HTTP=https://graphql-camara-deputados.herokuapp.com/
 VUE_APP_GRAPHQL_WS=
 
 # i18n
-VUE_APP_I18N_LOCALE=pt
-VUE_APP_I18N_FALLBACK_LOCALE=pt
+VUE_APP_I18N_LOCALE=pt-BR
+VUE_APP_I18N_FALLBACK_LOCALE=pt-BR
