--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-extend-layout": "^2.0.6",
     "vue-i18n": "^8.0.0",
     "vue-meta": "^1.6.0",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webfontloader": "^1.6.28"
